
15_03_2024
Added python script for creating a route list
    - create_route_list.py
Added route_list.html file for inserting into route selection when adding pokemon

16_03_2024
Changed helpers.py to utils.py
Added option to enable route tracking
    - Added Route Tracking column to Sessions Model
    - Added route tracking column to all admin tables
    - Added added option to enable route tracking in Create Session page
Added ruleset and route tracking checks when adding pokemon
    - includes add_pokemon_per_ruleset_group() function in utils.py

18_03_2024
Multiple Rulesets implemented for fusing and adding. Additional bug testing required. Should work in min 90% of cases.
Started process of separating utils file per blueprint

19_03_2024
Added sorting to party and box views showing all soul-linked pokemon first
Removed option for route tracking
    - unnecessary in the current version
Fixed bug where user was not being redirected to the Select Session page when deleting the current session. 

21_03_2024
Added preview fusions options to session manager
Added preview fusions page

22_03_2024
Got rid of awful 'variant' string list in pokedex table and replaced with one-to-many relationship
Started adjusting html pages with proper tab sizing per Google's standards
Added toggle button on preview fusions page to toggle final evolutions on and off
Fixed Wailmer evolution line in if-base-dex.csv and updated DB
Updated update_pokedex.py to update db after continuing with changes

23_03_2024
Slight optimization to preview_fusions script
session_manager now passes a dictionary of evolutions instead of list to avoid order issues
    - also now no longer requires zip() iterations

21_05_2024
Preview Fusions page now contains stats

22_05_2024
Adjusted sitewide names to Infinite Fusion Soul Manager and IFSM

30_05_2024
Added README file

30_05_2024
Updated link button for ruleset 1 for bootstrap formatting
