@@ -91,7 +91,7 @@
                 <h4 style="text-align: center; margin-bottom: 0px;">
                   {{ mon.info.species }}
                     {% if mon.info.base_id_2 %}
-                    - ({{ mon.info.base_1.species }} + {{ mon.info.base_2.species }})
+                    - ({{ mon.info.pokedex_base_1.species }} + {{ mon.info.pokedex_base_2.species }})
                     {% endif %}
                 </h4>
                 <h5 style="text-align: center; margin-bottom: 10px;">
@@ -239,7 +239,7 @@
                     <h4 style="text-align: center; margin-bottom: 0px;">
                       {{ mon.info.species }}
                         {% if mon.info.base_id_2 %}
-                        - ({{ mon.info.base_1.species }} + {{ mon.info.base_2.species }})
+                        - ({{ mon.info.pokedex_base_1.species }} + {{ mon.info.pokedex_base_2.species }})
                         {% endif %}
                     </h4>
                     <h5 style="text-align: center; margin-bottom: 10px;">
